Fix of jump main logo

--- a/src/scss/03_screens/_main.scss
+++ b/src/scss/03_screens/_main.scss
@@ -18,6 +18,7 @@
     transform: translateY(-50%);
 
     &__wrapper {
+      transition: 0.1s;
       position: sticky;
       top: 0;
       left: 0;
